# Delta-Robot

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/arduino_codes/: accel_delta.ino  accel_delta_home.ino  accel_delta_home_rosmix  home_new_three_motors.ino  pump_home_delta.ino  test_dir.ino
src/delta_description/: CMakeLists.txt  package.xml
src/delta_description/config/: joint_names_delta.yaml
src/delta_description/launch/: display_delta_GP.launch.py
src/delta_description/meshes/: Biceb1.STL  Biceb2.STL  Biceb3.STL  base_link.STL  con11.STL  con12.STL  con13.STL  con21.STL  forarm1.STL  forarm2.STL  forarm3.STL  forarm4.STL  forarm5.STL  forarm6.STL
src/delta_description/urdf/: delta.csv  delta.urdf
src/delta_stepper_hw/: CMakeLists.txt  delta_stepper_hw.xml  package.xml
src/delta_stepper_hw/include/delta_stepper_hw/: ArduinoStepperDriver.hpp  delta_stepper_hw.hpp
src/delta_stepper_hw/src/: delta_stepper_hw.cpp
src/kinematics/: package.xml  setup.py
src/kinematics/kinematics/: Forword_K.py  Inverse_kinematics.py  basic_sim.py  delta_client.py  forword_k.py  pump_client.py  simulation.py  workspace.py
src/main_delta_bringup/: CMakeLists.txt  package.xml
src/main_delta_bringup/config/: main_delta_controllers.yaml
src/main_delta_bringup/launch/: display.launch.xml
src/main_delta_urdf/: CMakeLists.txt  frames_2025-12-24_23.49.48.gv  package.xml
src/main_delta_urdf/urdf/: delta_robot.urdf.xacro  ros2_control_config.xacro
src/mini_delta_hardware/: CMakeLists.txt  mini_delta_hardware_interface.xml  package.xml
src/mini_delta_hardware/include/mini_delta_hardware/: ArduinoServoDriver.hpp  mini_delta_hardware_interface.hpp
src/mini_delta_hardware/src/: mini_delta_hardware_interface.cpp
